--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  font-size: 14px;
+}
+
+body {
+  height: 100vh;
+  background-color: #fcfcfc;
+}
+
+.mb-1 {
+  margin-bottom: 10px;
+}
+
+.mb-3 {
+  margin-bottom: 30px;
+}
+
+.p-dropdown {
+  display: flex;
+  width: 14rem;
+}
+
+.p-multiselect {
+  display: flex;
+  height: 2.792rem;
+  align-items: center;
+  width: 20.714rem;
+}
+
+.p-multiselect-label {
+  padding: 0.375rem 0.85rem;
+}
