finished basic ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 <div class="container">
   <app-parameters></app-parameters>
-  <app-act-list></app-act-list>
-  <app-acts-details></app-acts-details>
+  <div class="view-wrapper">
+    <app-act-list></app-act-list>
+    <app-acts-details></app-acts-details>
+  </div>
 </div>
