--- a/src/app/components/parameters/parameters.component.html
+++ b/src/app/components/parameters/parameters.component.html
@@ -13,14 +13,14 @@
       <div class="input-form input-date">
         <label for="period">Період актів</label>
         <p-calendar formControlName="selectedPeriod" inputId="period" [iconDisplay]="'input'" [showIcon]="true"
-          view="month" dateFormat="mm.yy" [readonlyInput]="true" placeholder="Виберіть період">
+          view="month" dateFormat="mm.yy" [readonlyInput]="true" placeholder="Період">
         </p-calendar>
       </div>
 
       <div class="input-form input-date">
-        <label for="selectedApprovedDate">Дата затвердження</label>
+        <label for="selectedApprovedDate">Затвердженні</label>
         <p-calendar formControlName="selectedApprovedDate" inputId="selectedApprovedDate" [iconDisplay]="'input'"
-          [showIcon]="true" inputId="selectedApprovedDate" dateFormat="dd.mm.yy" placeholder="Виберіть дату">
+          [showIcon]="true" inputId="selectedApprovedDate" dateFormat="dd.mm.yy" placeholder="Дата">
         </p-calendar>
       </div>
 
