--- a/src/app/components/act-list/act-list.component.css
+++ b/src/app/components/act-list/act-list.component.css
@@ -74,7 +74,7 @@
   top: -1px;
   left: -1px;
   border: 1px solid #f3f3f3;
-  height: 41px;
+  height: calc(100% + 2px);
   width: 41px;
   align-items: center;
   justify-content: center;
